force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/Cloudrop__MassMailer_Job_Status__c.object-meta.xml
<CustomObject>
    <label>MassMailer Job Status</label>
    <nameField>
        <displayFormat>JS-{0000}</displayFormat>
        <label>MassMailer Job Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MassMailer Job Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>