force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/fields/Cloudrop__Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Activity_Date__c</fullName>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>