force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/fields/Cloudrop__Event__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Event__c</fullName>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>