force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/fields/Cloudrop__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Job_Id__c</fullName>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>