force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/fields/Cloudrop__Message__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>