force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/fields/Cloudrop__Outreach__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Outreach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outreach</label>
    <referenceTo>Cloudrop__Bulk_Email_Statistic__c</referenceTo>
    <relationshipLabel>MassMailer Job Statuses</relationshipLabel>
    <relationshipName>MassMailer_Job_Statusess</relationshipName>
    <type>Lookup</type>
</CustomField>