force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/fields/Cloudrop__Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Scheduled_On__c</fullName>
    <label>Scheduled On</label>
    <type>DateTime</type>
</CustomField>