force-app/main/default/objects/Cloudrop__MassMailer_Job_Status__c/fields/Cloudrop__Stack_trace__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Stack_trace__c</fullName>
    <label>Stack trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>